added swagger for texts
